# cs50ai

./: .gitignore  README.md  pyproject.toml  runner.py  tictactoe.py
.ipynb_checkpoints/: german-nouns-gender-analysis-checkpoint.ipynb
Google PageRank/: README.md  pagerank.py
Heredity/: heredity.py
Minesweeper/: README.md  main.py
SixDegreesOfKevinBacon/: util.py
attention/: analysis.md  mask.py
crossword/: generate.py
heredity/: README.md  heredity.py
knights/: puzzle.py
minesweeper/: README.md  main.py  minesweeper.py
nim/: README.md  nim.py  play.py
parser/: parser.py
py-six-degrees-of-kevin-bacon /: degrees.py
shopping/: shopping.py
tictactoe/: tictactoe.py
traffic/: traffic.py
