[tool.poetry]
name = "python-cs50ai"
version = "0.1.0"
description = ""
authors = ["dianamatkava <dianamatkava@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
check50 = "^3.3.11"
submit50 = "^3.1.4"
pygame = "^2.5.2"
pillow = "^10.4.0"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
jupyterlab = "3"
opencv-python = "^4.10.0.84"
tensorflow = "^2.17.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
nltk = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
